// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonitorListStatusColumn can handle a non-numeric timestamp value 1`] = `
<EuiFlexGroup
  alignItems="center"
  gutterSize="none"
>
  <EuiFlexItem
    grow={1}
  >
    <EuiHealth
      color="success"
      style={
        Object {
          "display": "block",
        }
      }
    >
      Up
    </EuiHealth>
    <styled.span>
      <EuiToolTip
        content={
          <EuiText
            color="ghost"
            size="xs"
          >
            Thu May 09 2019 10:15:11 GMT-0400
          </EuiText>
        }
        delay="regular"
        position="top"
      >
        <EuiText
          color="subdued"
          size="xs"
        >
          a few seconds ago
        </EuiText>
      </EuiToolTip>
    </styled.span>
  </EuiFlexItem>
  <EuiFlexItem
    grow={2}
  >
    <EuiText
      size="s"
    >
      in 0/0 Locations
    </EuiText>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`MonitorListStatusColumn provides expected tooltip and display times 1`] = `
<EuiFlexGroup
  alignItems="center"
  gutterSize="none"
>
  <EuiFlexItem
    grow={1}
  >
    <EuiHealth
      color="success"
      style={
        Object {
          "display": "block",
        }
      }
    >
      Up
    </EuiHealth>
    <styled.span>
      <EuiToolTip
        content={
          <EuiText
            color="ghost"
            size="xs"
          >
            Thu May 09 2019 10:15:11 GMT-0400
          </EuiText>
        }
        delay="regular"
        position="top"
      >
        <EuiText
          color="subdued"
          size="xs"
        >
          a few seconds ago
        </EuiText>
      </EuiToolTip>
    </styled.span>
  </EuiFlexItem>
  <EuiFlexItem
    grow={2}
  >
    <EuiText
      size="s"
    >
      in 0/0 Locations
    </EuiText>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`MonitorListStatusColumn will display location status 1`] = `
<EuiFlexGroup
  alignItems="center"
  gutterSize="none"
>
  <EuiFlexItem
    grow={1}
  >
    <EuiHealth
      color="success"
      style={
        Object {
          "display": "block",
        }
      }
    >
      Up
    </EuiHealth>
    <styled.span>
      <EuiToolTip
        content={
          <EuiText
            color="ghost"
            size="xs"
          >
            Thu May 09 2019 10:15:11 GMT-0400
          </EuiText>
        }
        delay="regular"
        position="top"
      >
        <EuiText
          color="subdued"
          size="xs"
        >
          a few seconds ago
        </EuiText>
      </EuiToolTip>
    </styled.span>
  </EuiFlexItem>
  <EuiFlexItem
    grow={2}
  >
    <EuiText
      size="s"
    >
      in 3/3 Locations
    </EuiText>
  </EuiFlexItem>
</EuiFlexGroup>
`;
